--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
           >
             <span class="navbar-toggler-icon"></span>
           </button>
-          <div class="collapse navbar-collapse d-md-flex justify-content-center" id="navbarNav">
-            <ul class="navbar-nav w-75 d-md-flex justify-content-between">
+          <div class="collapse navbar-collapse d-xl-flex justify-content-center" id="navbarNav">
+            <ul class="navbar-nav w-75 d-lg-flex justify-content-between">
               <li class="nav-item">
                 <a class="nav-link active" aria-current="page" href="#"
                   >Inicio</a
