--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                 <a class="nav-link" href="pages/contact.html">Escríbeme</a>
               </li>
 
-              <a class="button d-none d-md-block" href="contact.html">Escríbeme</a>
+              <a class="button d-none d-md-block" href="pages/contact.html">Escríbeme</a>
             </ul>
           </div>
         </div>
